--- a/index.html
+++ b/index.html
@@ -11,14 +11,14 @@
 <body>
     
     <header class="site-header inicio">
-        <div class="contenedor">
+        <div class="contenedor contenido-header">
             <div class="barra">
                 <img src="img/logo.svg" alt="">
                 <nav class="navegacion">
                     <a href="nosotros.html">Nosotros</a>
                     <a href="anuncios.html">Anuncios</a>
                     <a href="blog.html">Blog</a>
-                    <a href="contacto.html">Contacto</a>
+                    <a href="contacto.html">Contacto</a> 
                 </nav>
             </div>
             <h1>Venta de Casas y Departamentos Exclusivos de Lujos</h1>
