--- a/index.html
+++ b/index.html
@@ -63,6 +63,20 @@
                     <h3>Casa de Lujo en el Lago</h3>
                     <p>Casa de lago con excelente vista, acabados de lujo a un excelente precio</p>
                     <p class="precio">$800.000 USD</p>
+                    <ul class="iconos-caracteristicas">
+                        <li>
+                            <img src="img/icono_wc.svg" alt="">
+                            <p>3</p>
+                        </li>
+                        <li>
+                            <img src="img/icono_estacionamiento.svg" alt="">
+                            <p>4</p>
+                        </li>
+                        <li>
+                            <img src="img/icono_dormitorio.svg" alt="">
+                            <p>6</p>
+                        </li>
+                    </ul>
                     <a href="#" class="boton boton-amarillo d-block">Ver Propiedad</a>
                 </div>
             </div>
@@ -73,6 +87,20 @@
                     <h3>Casa con Alberca</h3>
                     <p>Casa con alberca de lujo, una excelente oportunidad</p>
                     <p class="precio">$600.000 USD</p>
+                    <ul class="iconos-caracteristicas">
+                        <li>
+                            <img src="img/icono_wc.svg" alt="">
+                            <p>2</p>
+                        </li>
+                        <li>
+                            <img src="img/icono_estacionamiento.svg" alt="">
+                            <p>2</p>
+                        </li>
+                        <li>
+                            <img src="img/icono_dormitorio.svg" alt="">
+                            <p>4</p>
+                        </li>
+                    </ul>
                     <a href="#" class="boton boton-amarillo d-block">Ver Propiedad</a>
                 </div>
             </div>
@@ -83,6 +111,20 @@
                     <h3>Casa Terminados de Lujo</h3>
                     <p>Casa con diseño moderno, así como tecnología inteligente y amueblada</p>
                     <p class="precio">$750.000 USD</p>
+                    <ul class="iconos-caracteristicas">
+                        <li>
+                            <img src="img/icono_wc.svg" alt="">
+                            <p>3</p>
+                        </li>
+                        <li>
+                            <img src="img/icono_estacionamiento.svg" alt="">
+                            <p>3</p>
+                        </li>
+                        <li>
+                            <img src="img/icono_dormitorio.svg" alt="">
+                            <p>4</p>
+                        </li>
+                    </ul>
                     <a href="#" class="boton boton-amarillo d-block">Ver Propiedad</a>
                 </div>
             </div>
