Terminado entrada blog y formulario de contacto

--- a/index.html
+++ b/index.html
@@ -43,7 +43,7 @@
                 similique quisquam, quas quasi expedita. Quibusdam natus, dignissimos debitis 
                 molestias quam fugit?</p>
             </div>
-
+             
             <div class="iconos">
                 <img src="img/icono3.svg" alt="">
                 <h3 class="encabezado">A Tiempo</h3>
@@ -55,7 +55,7 @@
     </section>
     <main class="seccion contenedor" >
         <h2 class="fw300 center" >Casas y Departamentos en Venta</h2>
-
+                                
         <div class="contenedor-anuncios">
             <div class="anuncio">
                 <img src="img/anuncio1.jpg" alt="Anuncio Casa en el Lago">
@@ -108,7 +108,7 @@
             <div class="anuncio">
                 <img src="img/anuncio3.jpg" alt="Anuncio Casa Terminados de Lujo">
                 <div class="contenido-anuncio">
-                    <h3>Casa Terminados de Lujo</h3>
+                    <h3>Casa de Lujo</h3>
                     <p>Casa con diseño moderno, así como tecnología inteligente y amueblada</p>
                     <p class="precio">$750.000 USD</p>
                     <ul class="iconos-caracteristicas">
